--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" src="css/estilos.css">
+  <link rel="stylesheet" type="css/" href="estilos.css">
   <title>Pagina1</title>
 </head>
 <body>
