--- a/paginas/acerca_de.html
+++ b/paginas/acerca_de.html
@@ -3,6 +3,6 @@
     <title>Acerca de mi pagina</title>
   </head>
   <body>
-    <h1>Acerca de ni pagina</h1>
+    <h1>Acerca de mi pagina</h1>
   </body>
 </html>
