--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Pagina1</title>
 </head>
 <body>
-  <h1>Pagina Principal</h1>
+  <h1>Pagina 1</h1>
   <a href="pagina2.html">Ir a pagina 2</a>
 </body>
 </html>
