--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 <body>
   <h1>Pagina 1</h1>
   <a href="paginas/acerca_de.html">Ir a pagina Acerca de</a>
+  
+  <br>
+  <ing src="img/chango.png" width="200" height="100">
+    
 </body>
 </html>
