--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <a href="paginas/acerca_de.html">Ir a pagina Acerca de</a>
   
   <br>
-  <ing src="img/chango.png" width="200" height="100">
+  <img src="img/chango.png" width="200" height="100">
     
 </body>
 </html>
